[tool.poetry]
name = "ab180-test"
version = "0.1.0"
description = "For ab180 hiring test"
authors = ["minshogi <me@minshogi.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
aioredis = "^2.0.1"
user-agents = "^2.2.0"
aiomysql = "^0.2.0"
greenlet = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
