[tool.poetry]
name = "ab180-test"
version = "0.1.0"
description = "For ab180 hiring test"
authors = ["minshogi <me@minshogi.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
user-agents = "^2.2.0"
aiomysql = "^0.2.0"
greenlet = "^3.0.1"
fastapi = "^0.104.1"
redis = "^5.0.1"
redlock-py = "^1.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21"
asgi-lifespan = "^2.1.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
